# Multimodal_Defect_Detection

./: .gitignore  README.md  pyproject.toml
config/: data_config.yaml  model_config.yaml  train_config.yaml
data/manifests/: manifest.csv  test.csv  train.csv  val.csv
notebooks/: 01_eda_mvtec.ipynb  02_eda_cwru.ipynb
scripts/: data_ingestion.py
src/defect_detection/: utils.py
src/defect_detection/data/: augmentations.py  dataset.py  features.py  manifest.py  normalization.py  splitting.py
src/defect_detection/models/: fusion_model.py  image_encoder.py  vibration_encoder.py
src/defect_detection/training/: losses.py  train.py  visualization.py
tests/: test_augmentations.py  test_dataset.py  test_features.py  test_integration.py  test_manifest.py  test_splitting.py
tests/data/: test_dataset.py  test_manifest.py  test_normalization.py  test_splitting.py
tests/models/: test_fusion_model.py  test_image_encoder.py  test_vibration_encoder.py
tests/training/: test_losses.py  test_train.py  test_visualization.py
