[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "defect-detection"
version = "0.1.0"
description = "Multimodal defect detection combining visual inspection and vibration sensor data"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "scipy>=1.10",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.13.2",
    "fastapi>=0.100",
    "streamlit>=1.28",
    "pytest>=7.4",
    "kagglehub>=0.4.1"
]

[tool.setuptools.packages.find]
where = ["src"]